...
              child: FlatButton(
                onPressed: () {
                  Variables.sharedPreferences.put(Variables.isFirstTime, false);
                  Navigator.of(context).pop();
                },
                child: const Text(
                  "Skip",
                  style: TextStyle(color: Variables.accentColor),
                ),
                color: Colors.white.withOpacity(0.01),
              ),
            ),
          ),
...
                  } else {
                    liquidController!
                        .jumpToPage(page: liquidController!.currentPage + 1);
                  }
                },
                child: const Text(
                  "Next",
                  style: TextStyle(color: Variables.accentColor),
                ),
                color: Colors.white.withOpacity(0.01),
              ),
            ),
          )
...
