...
                      color: Colors.transparent,
                      borderRadius:
                          const BorderRadius.all(Radius.circular(50))),
                  child: PinFieldAutoFill(
                    keyboardType: TextInputType.phone,
                    codeLength: 6,
                    key: const ValueKey('otp-input'),
                    decoration: UnderlineDecoration(
                      textStyle:
                          const TextStyle(fontSize: 20, color: Colors.white),
                      colorBuilder:
                          FixedColorBuilder(Colors.black.withOpacity(0.3)),
                    ),
...
                        decoration: const BoxDecoration(
                          gradient: Variables.buttonGradient,
                        ),
                        child: const Align(
                          alignment: Alignment.center,
                          child: Text(
                            "Verify",
                            style: TextStyle(
                                color: Colors.white,
                                fontSize: 15,
                                fontWeight: FontWeight.w600),
                          ),
                        ),
...
