...
    super.initState();
    _countryPageController = PageController();
    if (country.images == null) {
      CountryBloc.getCountries().then((countries) {
        if (countries.isEmpty) {
          countries = [
            Country(id: 'CA', countryName: 'Canada'),
            Country(id: 'AU', countryName: 'Australia')
          ];
        }

        if (mounted) {
          setState(() {
...
            onTap: () {
              _scaffoldKey.currentState!.openEndDrawer();
            },
          )
        ],
        title: Text(
          "Study Lancer",
          style: TextStyle(
              fontSize: 24,
              fontWeight: FontWeight.bold,
              foreground: Paint()
                ..shader = const LinearGradient(
                  colors: <Color>[Color(0xffFF8B86), Color(0xffAE78BE)],
...
