...
                        decoration: const BoxDecoration(
                          gradient: Variables.buttonGradient,
                        ),
                        child: const Align(
                          alignment: Alignment.center,
                          child: Text(
                            "Get OTP",
                            style: TextStyle(
                                color: Colors.white,
                                fontSize: 15,
                                fontWeight: FontWeight.w600),
                          ),
                        ),
...
